fix(sass): ToC show/hide should do button, too
before, "Show table of contents" was the text on the button even when
the ToC was already shown. accidentally messed up that logic at some
point...

oh well! here's a fix :)

--- a/sass/components/_postinfo.scss
+++ b/sass/components/_postinfo.scss
@@ -126,17 +126,17 @@
         padding-bottom: 1em;
     }
 
-    #toc-cb:checked~.toc-list {
+    #toc-cb:checked ~ .toc-list {
         display: block;
     }
 
     // show/hide text + icon, swapped
-    #toc-cb:checked .extended-fab-btn #show-toc {
+    #toc-cb:checked ~ .toc-button #show-toc {
         display: none;
     }
 
-    #toc-cb:checked .extended-fab-btn #hide-toc {
-        display: block;
+    #toc-cb:checked ~ .toc-button #hide-toc {
+        display: inline-flex;
     }
 
     // get rid of ugly spaces
